data/application.css
* {
    outline-width: 0px;
    text-shadow: none;
}

treeview {
    padding: 2px 2px 2px 2px;
}

treeview:selected:hover {
        background-color: shade(@theme_selected_bg_color, 0.9);
        color: @theme_selected_fg_color;
}

treeview:hover {
    background-color: alpha(@theme_fg_color, 0.05);
    color: @theme_fg_color;
}

treeview.separator {
    color: alpha(@theme_fg_color, 0.1);
}

treeview .image:selected{
    color: @theme_selected_fg_color;
}

/* Fix a strange selection bug */
.treeview-no-selection:selected {
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}

Gtk.ListBoxRow .loved-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

Gtk.ListBoxRow .loved-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

Gtk.ListBoxRow .menu-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

Gtk.ListBoxRow .menu-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

popover.background separator {
    margin: 0px;
}

.progress-bottom {
    border: none;
    border-radius: 0px;
    background-color: transparent;
    background-image: none;
    padding-top: 0px;
    padding-bottom: 0px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.progress-bottom progress {
    background-color: @theme_selected_bg_color;
    background-image: none;
    border: none;
    border-radius: 0px;
    min-height: 6px;
}

.progress-bottom trough {
    border: none;
    border-radius: 0px;
    background-color: transparent;
    background-image: none;
    min-height: 6px;
}

.light-border {
    border: 1px solid shade(@theme_bg_color, 0.7);
    border-radius: 3px;
    padding: 10px;    
}

.light-background {
    background-color: shade(@theme_bg_color, 1.05);
    border: 1px solid shade(@theme_bg_color, 0.7);
    border-radius: 62px;
}

.no-top-border {
    border-top: none;
}

.invisible-widget {
    background-color: @theme_bg_color;
}

.box-shadow {
    box-shadow: 1px 1px 5px 5px alpha(black, 0.4);
}

.background-opacity {
    background-color: @theme_bg_color;
    opacity: 0.9;
}

.selected {
    color: @theme_selected_bg_color;
}

.osd-popover {
    opacity: 0.95;
}

.miniplayer-buttons {
    background: transparent;
    background-image: none;
    border: none;
    color: alpha(white, 0.6);
    box-shadow: none;
}

.miniplayer-buttons:hover {
    color: white;
}

.lyrics {
    font-weight: bold;
    background-color: alpha(@theme_bg_color, 0.8);
    min-width: 200px;
}

.lyrics-x-large {
    font-size: x-large;
}

.lyrics-large {
    font-size: large;
}

.lyrics-medium {
    font-size: medium;
}

.lollypop-title {
    font-weight: bold;
    font-size: smaller;
    padding: 0px 12px;
}

.lollypop-subtitle {
    font-size: smaller;
    padding: 0px 12px;
}

.white {
    background-color: white;
    border-radius: 4px;
}

.mini-scale {
    padding: 1px;
}

.borders {
    border: 1px solid shade(@theme_bg_color, 0.7);
}

.black {
    padding-top: 2px;
    background-color: alpha(black, 0.7);
    color: white;
}

.up-btn {
    border: 1px solid shade(@theme_bg_color, 0.7);
    border-radius: 4px;
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
    min-height: 0px;
	min-width: 48px;
}

.cover-frame {
    border: 1px solid shade(@theme_bg_color, 0.7);
    background-color: shade(@theme_bg_color, 1.5);
    padding: 3px;
    border-radius: 2px;
}

.cover-frame:selected {
    padding: 0px;
    border: 4px solid @theme_selected_bg_color;
}

.toolbar-cover-frame
{
    border-left: 1px solid shade(@theme_bg_color, 0.95);
    border-right: 1px solid shade(@theme_bg_color, 0.95);
    background-color: shade(@theme_bg_color, 1.5);
}

.small-cover-frame {
    border-radius: 1px;
    border: 1px solid shade(@theme_bg_color, 0.95);
    background-color: shade(@theme_bg_color, 1.5);
}

.artwork-icon {
    border: 1px solid alpha(@theme_fg_color, 0.8);
    background-color: shade(@theme_bg_color, 1.5);
    color: alpha(@theme_fg_color, 0.8);
    padding: 5px;
    border-radius: 50%;
}

.artwork-icon-large {
    border: 10px solid alpha(@theme_fg_color, 0.8);
    background-color: shade(@theme_bg_color, 1.5);
    color: alpha(@theme_fg_color, 0.8);
    border-radius: 50%;
}

.slow-show {
    transition: 1000ms linear;
    opacity: 1;
}

.slow-hide {
    transition: 1000ms linear;
    opacity: 0;
}

.rounded-icon {
    background: none;
    border: none;
    background-image: none;
    box-shadow: none;
	border-image-source: none;
    transition: 70ms linear;
    box-shadow: 0 0 3px white;
    background-color: alpha(black, 0.8);
    color: alpha(white, 0.9);
    padding: 12px;
    margin: 4px;
    border-radius: 50%;
}

.rounded-icon:hover {
    color: white;
    background-color: alpha(black, 0.9);
}

.squared-icon-small {
    transition: 70ms linear;
    box-shadow: 0 0 3px white;
    background-color: alpha(black, 0.8);
    margin: 4px;
    border-radius: 5px;
}

.squared-icon-small:hover {
    background-color: alpha(black, 0.9);
}

.overlay-button {
    transition: 0ms linear;
    background: none;
    color: alpha(white, 0.9);
    padding: 0px;
    margin: 0px;
    border: none;
    background-image: none;
    box-shadow: none;
	border-image-source: none;
	opacity: 0.9;
	padding: 6px;
	border-radius: 5px;
}

.overlay-button:hover {
    transition: 500ms linear;
    color: white;
    background-color: alpha(black, 0.9);
}

.padding {
    padding: 5px;
}

.no-padding {
    padding: 0px;
}

.no-border {
    border: none;
    background-image: none;
}

.queued {
    border-radius: 5px;
    color: @theme_selected_fg_color;
    background-color: @theme_selected_bg_color;
}

.drag-down {
    background-image: -gtk-gradient (linear,
                                     left top,
                                     left bottom,
                                     from (@theme_bg_color),
                                     color-stop (0.9, @theme_bg_color),
                                     to (@theme_selected_bg_color));
}

.drag-up {
    background-image: -gtk-gradient (linear,
                                     left top,
                                     left bottom,
                                     from (@theme_selected_bg_color),
                                     color-stop (0.1, @theme_bg_color),
                                     to (@theme_bg_color));
}

.trackswidget {
	background-color: transparent;
}

.albumrow {
    padding: 0px;
    border-radius: 5px;
	background-color: transparent;
  	color: inherit;
}

.albumrow-hover:hover {
	background-color: alpha(@theme_fg_color, 0.05);
}

.albumrow .album-menu-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

.albumrow:hover .album-menu-button {
  	color: inherit;
}

.albumrow:hover .album-menu-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.albumrow:selected {
    border-radius: 0px;
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}

.albumrow:visited {
    color: @theme_fg_color;
    background-color: alpha(@theme_selected_bg_color, 0.1);
}
.albumrow:visited label {
    color: @theme_fg_color;
}

.bold {
    font-weight: bold;
}

.trackrow {
    padding: 0px;
	background-color: transparent;
  	color: inherit;
}

.trackrow:hover {
    border-radius: 5px;
	background-color: alpha(@theme_fg_color, 0.05);
  	color: inherit;
}

.trackrow:selected {
    border-radius: 0px;
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}

.trackrowplaying {
    border-radius: 5px;
    padding: 0px;
	background-color: alpha(@theme_fg_color, 0.07);
  	color: inherit;
}

.trackrowplaying:selected {
    border-radius: 0px;
    background-color: @theme_selected_bg_color;
    color: @theme_selected_fg_color;
}

.trackrowplaying .loved-button {
	background-color: transparent;
	border-color: transparent;
	color: transparent;
}

.trackrowplaying:hover .loved-button {
	border-color: transparent;
	color: inherit;
}

.trackrowplaying:hover .loved-button:hover {
	border-color: alpha(#000000, 0.1);
}

.trackrowplaying .menu-button {
	background-color: transparent;
    border-color: transparent;
  	color: transparent;
}

.trackrowplaying:hover .menu-button {
	border-color: transparent;
  	color: inherit;
}

.trackrowplaying:hover .menu-button:hover {
	border-color: alpha(#000000, 0.1);
}

.trackrow .loved-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

.trackrow .menu-button {
	border-color: transparent;
	background-color: transparent;
	color: transparent;
}

.trackrow:hover .loved-button {
	color: inherit;
}

.trackrow:hover .menu-button {
  	color: inherit;
}

.trackrow:hover .loved-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.trackrow:hover .menu-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
}

.album-menu-selected .album-menu-button{
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

.track-menu-selected {
	background-color: alpha(@theme_fg_color, 0.03);
  	color: inherit;
}

.track-menu-selected .track-loved-button {
	border-color: alpha(@theme_fg_color, 0.1);
	color: inherit;
}

.track-menu-selected .track-menu-button {
	border-color: alpha(@theme_fg_color, 0.1);
  	color: inherit;
}

.light-button {
    opacity: 0.4;
    box-shadow: none;
	min-height: 24px;
	min-width: 24px;
	padding-left: 4px;
	padding-right: 4px;
	padding-top: 0px;
	padding-bottom: 0px;
	background-image: none;
	border-style: solid;
	border-image-source: none;
    border-bottom-width: 0px;
    border-top-width: 0px;
    border-left-width: 0px;
    border-right-width: 1px;
    border-radius: 0px;
    border-color: alpha(@theme_fg_color, 0.3);
    color: inherit;
}

.light-button-no-right-border {
    border-right-width: 0px;
}

.light-button:hover {
    color: inherit;
  	opacity: 1;
}

.menu-button {
    opacity: 0.4;
	box-shadow: none;
	min-height: 24px;
	min-width: 24px;
	padding-left: 4px;
	padding-right: 4px;
	padding-top: 0px;
	padding-bottom: 0px;
	background-image: none;
	border-style: solid;
	border-image-source: none;
    border-bottom-width: 1px;
    border-top-width: 1px;
    border-left-width: 1px;
    border-right-width: 1px;
    border-color: transparent;
    color: inherit;
}

.menu-button:hover {
    color: inherit;
    border-color: alpha(@theme_fg_color, 0.1);
  	opacity: 1;
}

.menu-button-no-border:hover
{
    border-color: transparent;
}

.album-menu-button {
    opacity: 0.4;
	box-shadow: none;
	min-height: 24px;
	min-width: 24px;
	padding-left: 4px;
	padding-right: 4px;
	padding-top: 0px;
	padding-bottom: 0px;
	background-image: none;
	border-style: solid;
	border-image-source: none;
    border-bottom-width: 1px;
    border-top-width: 1px;
    border-left-width: 1px;
    border-right-width: 1px;
    border-color: transparent;
    color: inherit;
}

.album-menu-button:hover {
    border-color: alpha(@theme_fg_color, 0.1);
    opacity: 1;
  	color: inherit;
}


.loved-button {
	box-shadow: none;
	padding-top: 0px;
	padding-bottom: 0px;
	background-image: none;
	color: inherit;
}

.loved-button:hover {
	border-color: alpha(@theme_fg_color, 0.1);
	color: inherit;
}

.popover-rating-loved-grid {
        /* (modelbutton's min-height(26px) - icon-height(16px)) / 2
         * + popover.menu's margin(2px) & padding(4px)
         */
        margin-bottom: 11px;
}

@keyframes spin {
  to { -gtk-icon-transform: rotate(1turn); }
}

.image-rotate {
  animation-name: spin;
  animation-duration: 60s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

